Fix wish options not visible

--- a/semantic/src/definitions/views/card.less
+++ b/semantic/src/definitions/views/card.less
@@ -42,7 +42,7 @@
   box-shadow: @boxShadow;
   transition: @transition;
   z-index: @zIndex;
-  word-wrap: break-word;
+  word-wrap: anywhere;
 }
 .ui.card {
   margin: @margin;
